<resources>
    <string name="app_name">1718024_Profile</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="follow">FOLLOW</string>
    <string name="message">MESSAGE</string>
    <string name="photos">Photos</string>
    <string name="ITN">National Institute Of Technology Malang</string>
    <string name="IT">Informatic Engineering</string>
</resources>

